[gd_scene load_steps=7 format=3 uid="uid://c0nyfu7d43u4r"]

[ext_resource type="Script" path="res://main/main_ui.gd" id="1_fkue3"]
[ext_resource type="PackedScene" uid="uid://bds8dr70borml" path="res://mats/ui/line_level_choicer/line_choicer.tscn" id="2_pf8qx"]
[ext_resource type="Texture2D" uid="uid://dnxovk8lovv7h" path="res://mats/imgs/stared.svg" id="3_go56l"]
[ext_resource type="Texture2D" uid="uid://12w4ixebv5n0" path="res://icon.svg" id="4_xe7gy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2ui4"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.051811, 0.148149, 0.144661, 0.905882)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_nlu1f"]
TooltipPanel/styles/panel = SubResource("StyleBoxFlat_u2ui4")

[node name="main_ui" type="Node"]
process_mode = 3
script = ExtResource("1_fkue3")

[node name="world" type="Node" parent="."]
process_mode = 1

[node name="cl" type="CanvasLayer" parent="."]

[node name="vbc" type="VBoxContainer" parent="cl"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mc2" type="MarginContainer" parent="cl/vbc"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="sc" type="ScrollContainer" parent="cl/vbc/mc2"]
layout_mode = 2

[node name="cont" type="VBoxContainer" parent="cl/vbc/mc2/sc"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="item" parent="cl/vbc/mc2/sc/cont" instance=ExtResource("2_pf8qx")]
layout_mode = 2
training = true
scenario = "res://mats/game_objs/scenarios/scnr1/scenario1.tscn"
recive_points = 0

[node name="item2" parent="cl/vbc/mc2/sc/cont" instance=ExtResource("2_pf8qx")]
layout_mode = 2
scenario = "res://mats/game_objs/scenarios/scnr2/scenario.tscn"

[node name="item3" parent="cl/vbc/mc2/sc/cont" instance=ExtResource("2_pf8qx")]
layout_mode = 2
scenario = "res://mats/game_objs/scenarios/scnr3/scenario.tscn"

[node name="pc" type="PanelContainer" parent="cl/vbc"]
layout_mode = 2
theme = SubResource("Theme_nlu1f")

[node name="mc" type="MarginContainer" parent="cl/vbc/pc"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="hbc" type="HBoxContainer" parent="cl/vbc/pc/mc"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="un" type="Label" parent="cl/vbc/pc/mc/hbc"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "ваши данные"
mouse_filter = 1
text = "{user_name}"

[node name="pnts" type="Label" parent="cl/vbc/pc/mc/hbc"]
modulate = Color(1, 0.929412, 0, 1)
layout_mode = 2
tooltip_text = "очки за уровни"
mouse_filter = 1
text = "{points}"

[node name="strs_c" type="HBoxContainer" parent="cl/vbc/pc/mc/hbc"]
layout_mode = 2
tooltip_text = "награды за выполнение заданий"

[node name="tr" type="TextureRect" parent="cl/vbc/pc/mc/hbc/strs_c"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("3_go56l")
expand_mode = 1
stretch_mode = 5

[node name="strs" type="Label" parent="cl/vbc/pc/mc/hbc/strs_c"]
layout_mode = 2
mouse_filter = 1
text = "{stars}"

[node name="hbc" type="HBoxContainer" parent="cl/vbc/pc/mc/hbc"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0

[node name="exit" type="Button" parent="cl/vbc/pc/mc/hbc/hbc"]
layout_mode = 2
size_flags_horizontal = 3
text = "выйти"
icon = ExtResource("4_xe7gy")
expand_icon = true

[node name="exit2" type="Button" parent="cl/vbc/pc/mc/hbc/hbc"]
layout_mode = 2
size_flags_horizontal = 3
text = "из игры"
icon = ExtResource("4_xe7gy")
icon_alignment = 2
expand_icon = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="button_down" from="cl/vbc/pc/mc/hbc/hbc/exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="cl/vbc/pc/mc/hbc/hbc/exit2" to="." method="_on_exit_2_button_down"]
